--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-12  Manuel Guesdon <mguesdon@orange-concept.com>
+
+	* GSWeb.framework/GSWTemplateParserXML.m: fix for autoclose tags
+	* GSWeb.framework/GSWHTMLStaticElement.m: fix for autoclose tags
+
 2001-03-11  Manuel Guesdon <mguesdon@orange-concept.com>
 
         * GSWeb.framework/GSWWOCompatibility.h/.m: added
