--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-08-28  Adam Fedor  <fedor@gnu.org>
+
+	* GSWExtensions.framework/Makefile.preamble: Add GSWeb framework
+	include
+	* GSWExtensionsGSW.framework/Makefile.preamble: Likewise
+	* GSWAdaptors/Apache/GNUmakefile (APACHEHEADERS): Add include.
+
 2001-08-20  Adam Fedor  <fedor@gnu.org>
 
 	* Update for changes in gsantlr and use of antlr 2.7.1
