--- a/README
+++ b/README
@@ -50,5 +50,8 @@ Special Thanks
 *	Catherine Biscourp <cbiscourp@sbuilders.com> for the 
 		GNUstepWeb logos and some other things...
 
+*       David Wetzel <dave@turbocat.de> from Turbocat and Kim Shrier <kim@tinker.com> 
+                for patches
+
 --------------------------------------------------------------------------------
 Note: All trademarks mentioned on this server belong to their respective owners.
