2001-11-07  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWExtensions.framework/Makefile.preamble:
		Added -I../GSWeb.framework/derived_src in ADDITIONAL_INCLUDE_DIRS
	* GSWExtensionsGSW.framework/Makefile.preamble:
		Added -I../GSWeb.framework/derived_src in ADDITIONAL_INCLUDE_DIRS


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@11329 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-07  Manuel Guesdon <mguesdon@orange-concept.com>
+
+	* GSWExtensions.framework/Makefile.preamble:
+		Added -I../GSWeb.framework/derived_src in ADDITIONAL_INCLUDE_DIRS
+	* GSWExtensionsGSW.framework/Makefile.preamble:
+		Added -I../GSWeb.framework/derived_src in ADDITIONAL_INCLUDE_DIRS
+
 2001-10-28  Manuel Guesdon <mguesdon@orange-concept.com>
 	Compilation is OK but this version hasn't been tested
 	
