2001-12-11  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWResourceManager.m: logs
	* GSWeb.framework/GSWDefaultAdaptorThread.m: logs
		corrected bug in response writing
	* GSWeb.framework/GSWApplication.m: logs
	* GSWAdaptors/common/GSWHTTPResponse.c: logs
	* added Example/hello 'application'


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@11702 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-11  Manuel Guesdon <mguesdon@orange-concept.com>
+
+	* GSWeb.framework/GSWResourceManager.m: logs
+	* GSWeb.framework/GSWDefaultAdaptorThread.m: logs
+		corrected bug in response writing
+	* GSWeb.framework/GSWApplication.m: logs
+	* GSWAdaptors/common/GSWHTTPResponse.c: logs
+	* added Example/hello 'application'
+	
 2001-11-07  Manuel Guesdon <mguesdon@orange-concept.com>
 
 	* GSWExtensions.framework/Makefile.preamble:
