2002-02-01  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWApplication.m:
		o in run: [[NSRunLoop currentRunLoop] run] instead of [NSRunLoop run]


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@12387 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2002-02-01  Manuel Guesdon <mguesdon@orange-concept.com>
+
+	* GSWeb.framework/GSWApplication.m:
+		o in run: [[NSRunLoop currentRunLoop] run] instead of [NSRunLoop run]
+	
+2002-02-01  Manuel Guesdon <mguesdon@orange-concept.com>
+
+	* GSWeb.framework/GSWConfig.h: 
+		o set localhost for GSWOPTVALUE_MonitorHost	
+	* GSWeb.framework/GSWApplication.m:
+		o logs
+
 2002-01-26  Manuel Guesdon <mguesdon@orange-concept.com>
 
 	* GSWeb.framework/GSWSwitchComponent.m: 
